welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:28: error: Invalid literal number
for (a<- 1to 8) {ligneUn();droite();avance(5);gauche()}
         ^PictureMono3:30: error: ')' expected but '}' found.
}
^